Fix horizontal spacing
between menu button and end of page

--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,7 @@ header h2 {
 .dropdown {
   position: relative;
   float: left;
+  margin-left: 50px;
 }
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
